# mstring

./: CMakeLists.txt
src/: CMakeLists.txt
src/include/: mstring.h
test/: CMakeLists.txt  basic_test.cpp  test.c
